--- a/portfolio-project/src/Component/Navbar/Navbar.css
+++ b/portfolio-project/src/Component/Navbar/Navbar.css
@@ -14,16 +14,17 @@
 
 
 .nav-connect {
-color: black;
+color: white;
     padding: 20px 40px;
     border-radius: 50px;
-    background-color: aliceblue;
+    background: linear-gradient(264deg, #df8908 -5.09%, #B415FF 106.28%);
     font-size: 22px;
     cursor: pointer;
-    transition: 0.5s;
+    
 }
 
-.nav-connect :hover{
+.nav-connect:hover{
     transform: scale(1.05);
-     
+    transition: 0.5s;
+    
 }
