--- a/portfolio-project/src/Component/Navbar/Navbar.css
+++ b/portfolio-project/src/Component/Navbar/Navbar.css
@@ -28,3 +28,17 @@ color: white;
     transition: 0.5s;
     
 }
+.nav-menu li {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    cursor: pointer;
+}
+.nav-menu li img {
+    display: flex;
+    margin: auto;
+}
+.anchor-link {
+    text-decoration: none;
+    color: white;
+}
