--- a/portfolio-project/src/Component/Navbar/Navbar.css
+++ b/portfolio-project/src/Component/Navbar/Navbar.css
@@ -45,6 +45,11 @@ color: white;
 }
 .nav-mob-close{
     display: none;
+
+}
+.nav-mob-open{
+    display: none;
+
 }
 @media(max-width:768px){
     .navbar{
@@ -83,7 +88,7 @@ color: white;
         padding-left: 100px;
         flex-direction: row;
         gap: 20px;
-        
+
     }
 
 }
